<resources>
    <string name="app_name">فلوت</string>

    <string name="best_apps">برترین برنامه ها</string>
    <string name="best_sellers">پرفروش ترین برنامه ها</string>
    <string name="new_free_apps">جدیدترین رایگانی ها</string>

    <string name="contact_menu">تماس</string>
    <string name="updates_apps">بروز رسانی ها</string>
    <string name="home_menu">خانه</string>

    <string name="contact_message">صفحه تماس با ما</string>

    <string name="about_title">درباره ما</string>
    <string name="contact_title">تماس با ما</string>

    <string name="send_sms">ارسال پیامک</string>
    <string name="exit_title">خروج</string>

    <string name="search_menu">جستجو</string>

    <string name="website">وب سایت</string>

    <string name="setting_menu">تنظیمات</string>

    <string name="telegram">تلگرام ما</string>


    <string name="register_user">ثبت نام</string>

    <string name="login_user">ورود کاربران</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="exit_message">آیا واقعا میخوای ما رو تنها بزاری ؟</string>

    <string name="yes">اره بابا کشتی منو</string>
    <string name="no">نه.میمونم</string>

    <string name="login_form">ورود کاربران</string>

    <string name="hint_user">نام را وارد کنید</string>
    <string name="hint_pass">رمز را وارد کنید</string>
    <string name="cancel">انصراف</string>
    <string name="save_pass">ذخیره سازی</string>

    <string name="success_register">ثبت نام انجام شد حله</string>

    <string name="success_fail">نشد دیگه..دوباره بزن</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">دسته بندی</string>

    <string name="details">توضیحات</string>
    <string name="comemnts">نظرات</string>
    <string name="related">مرتبط</string>
    <string name="category_icon">آیکن دسته بندی</string>
</resources>