<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_about"
        android:title="@string/about_title" />

    <item
        android:id="@+id/item_contact"
        android:title="@string/contact_title" />

    <item
        android:id="@+id/item_sms"
        android:title="@string/send_sms" />

    <item
        android:id="@+id/item_exit"
        android:title="@string/exit_title" />

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search_menu"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/item_website"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/website"
        app:showAsAction="always"

        />


</menu>