<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/orange_600"
        android:gravity="center"
        android:text="@string/login_form"
        android:textColor="@color/white"
        android:textSize="@dimen/title_bar" />


    <EditText
        android:id="@+id/edt_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_person_black_24dp"
        android:hint="@string/hint_user" />


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/hint_pass"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/chk_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pass" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue_900" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_user" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />


    </LinearLayout>


</LinearLayout>